--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:hover {
 }
 
 .hpBarraPersonagemBase,
-.manaBarraPersonagemBase {
+.mpBarraPersonagemBase {
 	margin-left: -30px;
 	position: absolute;
 	width: 134px;
@@ -76,7 +76,7 @@ a:hover {
 }
 
 .hpBarraPersonagemConteudo,
-.manaBarraPersonagemConteudo {
+.mpBarraPersonagemConteudo {
 	position: absolute;
 	width: 100%;
 	height: 14px;
@@ -84,7 +84,7 @@ a:hover {
 }
 
 .hpBarraPersonagemTexto,
-.manaBarraPersonagemTexto {
+.mpBarraPersonagemTexto {
 	position: absolute;
 	width: 100%;
 	height: 14px;
@@ -99,11 +99,11 @@ a:hover {
 	background: red;
 }
 
-.manaBarraPersonagemBase {
+.mpBarraPersonagemBase {
 	margin-top: -30px;
 }
 
-.manaBarraPersonagemConteudo {
+.mpBarraPersonagemConteudo {
 	background: blue;
 }
 
@@ -116,6 +116,15 @@ a:hover {
 	height: 58px;
 	background: black;
 	border: 3px solid black;
+}
+
+.barraModificadoresPersonagem {
+	margin-top: 90px;
+	margin-left: 135px;
+	position: absolute;
+	padding: 1px;
+	width: 700px;
+	height: 58px;
 }
 
 .barraHabilidades {
@@ -162,6 +171,18 @@ a:hover {
 	margin-left: 5px;
 }
 
+.modificadorPersonagem {
+	float: left;
+	padding: 1px;
+	width: 62px;
+	height: 55px;
+	background: green;
+	border: 3px solid black;
+	cursor: pointer;
+	margin-left: 5px;
+	font-size: 12px;
+}
+
 .alteracaoPersonagem {
 	position: absolute;
 	z-index: 2;
@@ -175,12 +196,10 @@ a:hover {
 
 .turnoPersonagem {
 	display: none;
-	background: url(../imagens/turno.png) no-repeat;
-	background-size: 100% 100%;
 	position: absolute;
 	width: 50px;
 	height: 65px;
-	top: -130px;
+	top: -150px;
 }
 
 .turnoPersonagem.left {
