--- a/css/personagens.css
+++ b/css/personagens.css
@@ -1,40 +1,203 @@
 .personagem {
 	position: absolute;
-	width: 10%;
-	height: 20%;
+	width: 7%;
+	height: 14%;
 }
 
 .slot1,
-.slot2 {
+.slot2,
+.slot5,
+.slot6 {
 	z-index: 6;
 	bottom: 10.5%;
 }
 
 .slot3,
-.slot4 {
+.slot4 ,
+.slot7 ,
+.slot8 {
 	z-index: 5;
 	bottom: 30.5%;
 }
 
-.slot1,
-.slot3 {
+.slot1 {
 	left: 10%;
 }
 
-.slot2,
-.slot4 {
-	left: 25%;
+.slot2 {
+	left: 27%;
 }
 
-.personagem .imagemPersonagem {
+.slot3 {
+	left: 6%;
+}
+
+.slot4 {
+	left: 23%;
+}
+
+.slot5 {
+	right: 27%;
+}
+
+.slot6 {
+	right: 10%;
+}
+
+.slot7 {
+	right: 23%;
+}
+
+.slot8 {
+	right: 6%;
+}
+
+.barraModificadoresPersonagem {
+	position: absolute;
+	width: 186%;
+	height: 30%;
+	top: -57%;
+}
+
+.barraModificadoresPersonagem .modificador {
+	float: left;
+	background: url(../imagens/modificadoresPersonagem.png);
+	background-size: 800% 800%;
+	width: 16.003%;
+	height: 88.23%;
+	margin-right: 3%;
+}
+
+.barraModificadoresPersonagem .modificador.ataque1 {
+	background-position: 0% 0%;
+}
+
+.barraModificadoresPersonagem .modificador.ataque2 {
+	background-position: 14% 0%;
+}
+
+.circuloLevelPersonagem {
+	position: absolute;
+	z-index: 2;
+	background: url(../imagens/circuloLevel.png);
+	background-size: 100% 100%;
+	top: -39%;
+	margin-left: -49%;
+	width: 50%;
+	height: 45%;
+}
+
+.level {
+	position: absolute;
+}
+
+.level.unidade {
+	margin-top: 25%;
+	margin-left: 27%;
+	width: 50%;
+	height: 50%;
+}
+
+.level.dezena {
+	margin-top: 37%;
+	margin-left: 20%;
+	width: 33%;
+	height: 33%;
+}
+
+.level.dezena:last-child {
+	left: 30%;
+}
+
+.level.um {
+	background: url(../imagens/lvl/1.png);
+	background-size: 100% 100%;
+}
+
+.level.zero {
+	background: url(../imagens/lvl/0.png);
+	background-size: 100% 100%;
+}
+
+.hpBarraPersonagemBase.fundo,
+.hpBarraPersonagemBase,
+.mpBarraPersonagemBase {
+	position: absolute;
+	top: -15%;
+	width: 100%;
+	height: 5%;
+	opacity: .8;
+}
+
+.fundoBarraPersonagemBase {
+	position: absolute;
+	background: url(../imagens/fundoBarra.png);
+	background-size: 100% 100%;
+	width: 93.6%;
+	height: 159%;
+    top: -43%;
+}
+
+.fundoBarraPersonagemBaseCanto {
+	position: absolute;
+	background: url(../imagens/fundoBarraCanto.png);
+	background-size: 100% 100%;
+	width: 7%;
+	height: 159%;
+	top: -43%;
+	right: -0.6%;
+}
+
+.hpBarraPersonagemBase {
+	margin-top: -9%;
+}
+
+.hpBarraPersonagemConteudo {
+	background: url(../imagens/barraHP.png);
+}
+
+.mpBarraPersonagemBase {
+	margin-top: -0.3%;
+}
+
+.mpBarraPersonagemConteudo {
+	background: url(../imagens/barraMP.png);
+}
+
+.hpBarraPersonagemConteudo,
+.mpBarraPersonagemConteudo {
+	position: absolute;
+	background-size: 100% 100%;
+	width: 100%;
+	height: 100%;
+}
+
+.personagem .imagem {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	bottom: 0;
 }
 
+.personagem .turno {
+	display: none;
+	position: absolute;
+	background: url(../imagens/turno.gif) no-repeat;
+	background-size: 100% 100%;
+	z-index: -1;
+	width: 119%;
+	height: 11%;
+	bottom: -7%;
+	left: -11%;
+}
+
+.personagem .turno.ativo {
+	display: block;
+}
+
 /* Funções do Ambiente de Testes */
-.personagem.slot1 .imagemPersonagem {
+
+.personagem.slot1 .imagem {
 	background: url(../imagens/personagens/1.gif);
 	background-size: 100% 100%;
 	bottom: -6%;
@@ -45,7 +208,7 @@
 	transform: scale(-1, 1);
 }
 
-.personagem.slot2 .imagemPersonagem {
+.personagem.slot2 .imagem {
 	background: url(../imagens/personagens/2.gif);
 	background-size: 100% 100%;
 	bottom: -2%;
@@ -56,13 +219,13 @@
 	transform: scale(-1, 1);
 }
 
-.personagem.slot3 .imagemPersonagem {
+.personagem.slot3 .imagem {
 	background: url(../imagens/personagens/3.gif);
 	background-size: 100% 100%;
 	bottom: -8%;
 }
 
-.personagem.slot4 .imagemPersonagem {
+.personagem.slot4 .imagem {
 	background: url(../imagens/personagens/4.png);
 	background-size: 100% 100%;
 	bottom: -3%;
@@ -73,192 +236,46 @@
 	transform: scale(-1, 1);
 }
 
-/*
-.imagemPersonagem {
-	position: absolute;
-	width: 80px;
-	height: 80px;
-}
-
-.hpBarraPersonagemBase,
-.mpBarraPersonagemBase {
-	margin-left: -30px;
-	position: absolute;
-	width: 134px;
-	height: 14px;
-	border: 3px solid black;
-}
-
-.hpBarraPersonagemConteudo,
-.mpBarraPersonagemConteudo {
-	position: absolute;
-	width: 100%;
-	height: 14px;
-	background: red;
-}
-
-.hpBarraPersonagemTexto,
-.mpBarraPersonagemTexto {
-	position: absolute;
-	width: 100%;
-	height: 14px;
-	font-size: 12px;
-}
-
-.hpBarraPersonagemBase {
-	margin-top: -52px;
-}
-
-.hpBarraPersonagemConteudo {
-	background: red;
-}
-
-.mpBarraPersonagemBase {
-	margin-top: -30px;
-}
-
-.mpBarraPersonagemConteudo {
-	background: blue;
-}
-
-.barraStatusPersonagem {
-	margin-top: 90px;
-	margin-left: -30px;
-	position: absolute;
-	padding: 1px;
-	width: 138px;
-	height: 58px;
-	background: black;
-	border: 3px solid black;
-}
-
-.barraModificadoresPersonagem {
-	margin-top: 90px;
-	margin-left: 135px;
-	position: absolute;
-	padding: 1px;
-	width: 700px;
-	height: 58px;
-}
-
-.barraHabilidades {
-	background: url(../imagens/barraHabilidades.png) no-repeat;
+.personagem.slot5 .imagem {
+	background: url(../imagens/personagens/1.gif);
 	background-size: 100% 100%;
-	position: absolute;
-	width: 200px;
-	height: 200px;
+	bottom: -6%;
+	-moz-transform: scale(1, 1);
+	-webkit-transform: scale(1, 1);
+	-o-transform: scale(1, 1);
+	-ms-transform: scale(1, 1);
+	transform: scale(1, 1);
 }
 
-.barraHabilidadesPersonagem {
-	margin-top: -20px;
-	position: absolute;
-	width: 400px;
-	height: 100px;
-}
-
-.barraHabilidadesPersonagem .ataque {
-	float: left;
-	background: url(../imagens/espada.png) no-repeat;
+.personagem.slot6 .imagem {
+	background: url(../imagens/personagens/2.gif);
 	background-size: 100% 100%;
-	padding: 1px;
-	width: 98px;
-	height: 98px;
-	cursor: pointer;
+	bottom: -2%;
+	-moz-transform: scale(1, 1);
+	-webkit-transform: scale(1, 1);
+	-o-transform: scale(1, 1);
+	-ms-transform: scale(1, 1);
+	transform: scale(1, 1);
 }
 
-.barraHabilidadesPersonagem.left {
-	margin-left: 120px;
+.personagem.slot7 .imagem {
+	background: url(../imagens/personagens/3.gif);
+	background-size: 100% 100%;
+	bottom: -8%;
+	-moz-transform: scale(-1, 1);
+	-webkit-transform: scale(-1, 1);
+	-o-transform: scale(-1, 1);
+	-ms-transform: scale(-1, 1);
+	transform: scale(-1, 1);
 }
 
-.barraHabilidadesPersonagem.right {
-	margin-left: -145px;
+.personagem.slot8 .imagem {
+	background: url(../imagens/personagens/4.png);
+	background-size: 100% 100%;
+	bottom: -3%;
+	-moz-transform: scale(1, 1);
+	-webkit-transform: scale(1, 1);
+	-o-transform: scale(1, 1);
+	-ms-transform: scale(1, 1);
+	transform: scale(1, 1);
 }
-
-.habilidade {
-	float: left;
-	padding: 1px;
-	width: 92px;
-	height: 92px;
-	background: blue;
-	border: 3px solid black;
-	cursor: pointer;
-	margin-left: 5px;
-}
-
-.modificadorPersonagem {
-	float: left;
-	padding: 1px;
-	width: 62px;
-	height: 55px;
-	background: green;
-	border: 3px solid black;
-	cursor: pointer;
-	margin-left: 5px;
-	font-size: 12px;
-}
-
-.alteracaoPersonagem {
-	position: absolute;
-	z-index: 2;
-	left: -25px;
-	margin-top: -55px;
-	text-align: center;
-	width: 134px;
-	height: 14px;
-	text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
-}
-
-.turnoPersonagem {
-	display: none;
-	position: absolute;
-	width: 50px;
-	height: 65px;
-	top: -150px;
-}
-
-.turnoPersonagem.left {
-	left: 20px;
-}
-
-.turnoPersonagem.right {
-	right: 15px;
-}
-
-#vitoria {
-	z-index: 10;
-	position: absolute;
-	width: 100%;
-	height: 150px;
-	font-size: 100px;
-	text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
-}
-
-#vitoria.vitoria {
-	color: orange;
-}
-
-#vitoria.derrota {
-	color: red;
-}
-
-#console {
-	top: 10px;
-	position: absolute;
-	width: 100%;
-	height: 80px;
-	font-size: 16px;
-}
-
-#conteudoConsole {
-	overflow-x: hidden;
-	text-align: left;
-	width: 40%;
-	height: 100%;
-	padding: 5px;
-	background: #BBBBBB;
-	border: 3px solid black;
-	color: white;
-	text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
-}
-
-*/
