--- a/css/cenario.css
+++ b/css/cenario.css
@@ -26,7 +26,7 @@
 	margin-bottom: 12%;
 }
 
-/* Barra de Habilidades do Personagem */
+/* Barra de Habilidades do Monstro */
 
 .barraHabilidades {
 	position: absolute;
@@ -39,21 +39,24 @@
 
 .barraHabilidades .habilidade {
 	float: left;
-	background: url(../imagens/botaoHabilidade.png);
+	background: url(../imagens/botaoHabilidade2.png);
 	background-size: 100% 100%;
 	width: 29%;
 	height: 99.16%;
 	margin-left: 3%;
 }
-
-.barraHabilidades .habilidade .imagem {
-	position: absolute;
-	background: url(../imagens/imagemHabilidade.png);
+.barraHabilidades .habilidade.ativo {
+	background: url(../imagens/botaoHabilidade.png);
 	background-size: 100% 100%;
+}
+
+.barraHabilidades .habilidade .imagem img {
+	position: absolute;
 	width: 18.3%;
 	height: 62.566%;
 	margin-top: 5.2%;
-	margin-left: 5.38%;
+	margin-left: -9.18%;
+	cursor: pointer;
 }
 
 /* Cenário - Batalha */
