--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,7 @@ body {
 	text-align: center;
 	position: absolute;
 	z-index: 20;
-	bottom: 80px;
+	top: 80px;
 	right: 30px;
 	padding: 20px;
 	font-weight: bold;
@@ -23,7 +23,7 @@ body {
 	text-align: center;
 	position: absolute;
 	z-index: 20;
-	bottom: 30px;
+	top: 30px;
 	right: 30px;
 	padding: 10px 20px 10px 20px;
 	font-weight: bold;
