--- a/css/monstros.css
+++ b/css/monstros.css
@@ -1,4 +1,3 @@
-
 /* Geral */
 
 .monstro {
@@ -68,6 +67,108 @@
 	-o-transform: scale(-1, 1);
 	-ms-transform: scale(-1, 1);
 	transform: scale(-1, 1);
+}
+
+/* Barra de Habilidades do Monstro */
+
+.barraHabilidades {
+	position: absolute;
+	z-index: 10;
+	bottom: 1%;
+	left: 38%;
+	width: 25%;
+	height: 13%;
+}
+
+.barraHabilidades .habilidade {
+	float: left;
+	background: url(../imagens/botaoHabilidade2.png);
+	background-size: 100% 100%;
+	width: 29%;
+	height: 99.16%;
+	margin-left: 3%;
+}
+
+.barraHabilidades .habilidade.ativo {
+	background: url(../imagens/botaoHabilidade.png);
+	background-size: 100% 100%;
+}
+
+.barraHabilidades .habilidade .imagem img {
+	position: absolute;
+	width: 18.3%;
+	height: 62.566%;
+	margin-top: 5.2%;
+	margin-left: -9.18%;
+}
+
+.barraHabilidades .habilidade .imagem img.skill {
+	cursor: pointer;
+}
+
+.barraHabilidades .habilidade .imagem img.cooldown {
+	z-index: 2;
+	margin-left: 5.33%;
+	margin-top: 5%;
+	width: 18.5%;
+	height: 63.5%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.exibir,
+.barraHabilidades .habilidade .imagem img.cooldown.exibir {
+	display: block;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.ocultar,
+.barraHabilidades .habilidade .imagem img.cooldown.ocultar {
+	display: none;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown {
+	z-index: 3;
+	background: url(../imagens/numeros.png);
+	background-size: 1030% 105%;
+	position: absolute;
+	width: 12.3%;
+	height: 48.566%;
+	margin-top: 7.4%;
+	margin-left: 8.3%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.um {
+	background-position: 11.1% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.dois {
+	background-position: 22.2% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.tres {
+	background-position: 33.3% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.quatro {
+	background-position: 44.4% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.cinco {
+	background-position: 55.5% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.seis {
+	background-position: 66.6% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.sete {
+	background-position: 77.7% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.oito {
+	background-position: 88.8% 0%;
+}
+
+.barraHabilidades .habilidade .imagem .exibirCooldown.nove {
+	background-position: 99.9% 0%;
 }
 
 /* Modificadores */
@@ -141,17 +242,17 @@
 }
 
 .level.unidade {
-	margin-top: 25%;
-	margin-left: 27%;
-	width: 50%;
-	height: 50%;
+	margin-top: 22%;
+	margin-left: 28%;
+	width: 47%;
+	height: 58%;
 }
 
 .level.dezena {
-	margin-top: 37%;
-	margin-left: 20%;
+	margin-top: 31%;
+	margin-left: 19.5%;
 	width: 33%;
-	height: 33%;
+	height: 42%;
 }
 
 .level.dezena:last-child {
